service.yaml
################################################
# Standardized Service
################################################
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector: {}
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: app
