ingress.yaml
################################################
# Standardized Templates - Ingress
################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: 'ip'
spec:
  ingressClassName: alb
  rules:
  - host: base.dev.lokalise.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: base
            port:
              number: 80
